--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,9 @@
               "src/styles.css",
               "node_modules/tailwindcss/base.css",
               "node_modules/tailwindcss/components.css",
-              "node_modules/tailwindcss/utilities.css"
+              "node_modules/tailwindcss/utilities.css",
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+
             ],
             "scripts": [],
             "server": "src/main.server.ts",
