--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chart.js": "^4.4.3",
     "express": "^4.18.2",
     "ng2-charts": "^6.0.1",
+    "recharts": "^2.12.7",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.4.10",
     "tslib": "^2.3.0",
